docs(config): update .github issue templates for orpc shield

--- a/.github/ISSUE_TEMPLATE/1.Bug_report.md
+++ b/.github/ISSUE_TEMPLATE/1.Bug_report.md
@@ -1,6 +1,6 @@
 ---
 name: Bug report
-about: Create a tRPC Shield bug report.
+about: Create an oRPC Shield bug report.
 ---
 
 Please consider supporting me for faster fixes, responses and features
