--- a/.github/ISSUE_TEMPLATE/2.Feature_request.md
+++ b/.github/ISSUE_TEMPLATE/2.Feature_request.md
@@ -1,6 +1,6 @@
 ---
 name: Feature request
-about: Create a feature request for tRPC Shield.
+about: Create a feature request for oRPC Shield.
 ---
 
 Please consider supporting me for faster fixes, responses and features
