--- a/.github/ISSUE_TEMPLATE/3.Question_about_Shield.md
+++ b/.github/ISSUE_TEMPLATE/3.Question_about_Shield.md
@@ -1,17 +1,17 @@
 ---
-name: Question about tRPC Shield
-about: Ask about tRPC Shield concepts.
+name: Question about oRPC Shield
+about: Ask about oRPC Shield concepts.
 ---
 
 Please consider supporting me for faster fixes, responses and features
 [Sponsor Me](https://github.com/sponsors/omar-dulaimi)
 
-# Question about tRPC Shield
+# Question about oRPC Shield
 
 Please describe the idea you are interested about. If possible also provide a
 context to your problem and your end goals.
 
-# Question about tRPC concepts
+# Question about oRPC concepts
 
 Please describe the concept you are interested in. If possible also provide
 links and source of the problem that you have.
